# evercurrent

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  EVERCURRENT_BUILD_DOC.md  LICENSE  Makefile  README.md  docker-compose.yml
apps/api/: .dockerignore  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260516_0410_0001_initial_schema.py  20260517_0700_0002_digests_per_phase.py  20260517_0730_0003_doc_phases.py  20260517_0830_0004_project_start_date.py  20260607_2000_0005_orgs_and_rls.py  20260607_2100_0006_connectors_and_raw_events.py  20260607_2200_0007_scores_table.py  20260607_2300_0008_cards.py  20260608_0000_0009_drive_documents.py  20260608_0100_0010_digests_v2.py  20260608_0200_0011_notifications_subscriptions.py  20260610_1800_0012_member_project_profile.py  20260612_1200_0013_insights.py  20260613_0800_0014_rls_hardening.py  20260613_0900_0015_org_branding.py  20260616_2200_0016_drop_feedback_table.py  20260617_1000_0017_drop_notify_tables.py  20260617_1100_0018_rename_cards_to_signals.py  20260617_1200_0019_signal_resolution.py  20260618_1300_0020_signal_affected_roles.py
apps/api/seed_data/: backdate_corpus.py  channels.json  db_seed.py  generate_corpus.py  messages_day_1.json  messages_day_2.json  messages_day_3.json  messages_day_4.json  messages_day_5.json  post_personas.py  project.json  run_sync.py  seed_drive_mock.py  slack_app_manifest.json  slack_seed.py  slack_seed_personas.py  slack_wipe.py  user_chatter.py  users.json
apps/api/seed_data/docs/: bom.md  eco_log.md  prd.md  test_report_drop.md  test_report_thermal.md
apps/api/src/evercurrent/: __init__.py  config.py  main.py  realtime.py
apps/api/src/evercurrent/agent/: __init__.py  runner.py  streaming.py  tools.py
apps/api/src/evercurrent/agent/prompts/: system.txt
apps/api/src/evercurrent/agent_tools/: client.py  schemas.py
apps/api/src/evercurrent/api/: __init__.py  deps.py  middleware.py  router.py  schemas.py
apps/api/src/evercurrent/api/routes/: agent.py  (+23 more)
apps/api/src/evercurrent/auth/: __init__.py  auth0.py  deps.py
apps/api/src/evercurrent/cards/: __init__.py  builder.py  card_drafter.py  repository.py  schemas.py
apps/api/src/evercurrent/classification/: __init__.py  message_classifier.py  router_agent.py  schemas.py
apps/api/src/evercurrent/connectors/: __init__.py  base.py
apps/api/src/evercurrent/db/: __init__.py  models.py  schema_check.py  session.py
apps/api/src/evercurrent/decisions/: __init__.py  extractor.py  schemas.py
apps/api/src/evercurrent/digest/: __init__.py  agent.py  digest_generator.py  generator.py  repository.py  scheduler.py  schemas.py
apps/api/src/evercurrent/domain/: __init__.py  decisions.py  digests.py  documents.py  memberships.py  messages.py  projects.py  stats.py  users.py
apps/api/src/evercurrent/enrichment/: __init__.py  schemas.py  tagger.py
apps/api/src/evercurrent/eve/: __init__.py  agent.py  grounding.py  serialization.py  tools.py
apps/api/src/evercurrent/focus/: __init__.py  compute.py  schemas.py
apps/api/src/evercurrent/ingestion/: __init__.py  chunking.py  classifier.py  doc_classifier.py  pdf_extract.py  personas.py  schemas.py  seeder.py  synthetic.py  synthetic_schemas.py  tasks.py
apps/api/src/evercurrent/insights/: __init__.py  agent.py  citation_verifier.py  eve_agent.py  serialization.py  tools.py
apps/api/src/evercurrent/jobs/: __init__.py  celery_app.py  celery_tasks.py  metrics_server.py  worker.py
apps/api/src/evercurrent/llm/: __init__.py  client.py  metrics.py  tiering.py
apps/api/src/evercurrent/mcp/: __init__.py  client.py  schemas.py  server.py
apps/api/src/evercurrent/notify/: __init__.py  block_kit.py  quiet_hours.py  repository.py  schemas.py  slack_deliver.py  urgent_deliver.py
apps/api/src/evercurrent/rag/: __init__.py  chunker.py  embedder.py  indexer.py  retriever.py
apps/api/src/evercurrent/routing/: __init__.py  router_agent.py  schemas.py
apps/api/src/evercurrent/scoring/: __init__.py  dependencies.py  engine.py  relevance.py  repository.py  schemas.py  weights.py
apps/api/src/evercurrent/scripts/: __init__.py  backdate_corpus.py  bootstrap_demo.py  demo_chatter.py  generate_corpus.py  personas.py  resolve_chatter.py  run_sync.py  slack_wipe.py  synthetic.py  user_chatter.py
apps/api/src/evercurrent/signals/: __init__.py  repository.py  resolution.py  schemas.py  signal_drafter.py
apps/api/src/evercurrent/tenancy/: __init__.py  middleware.py  rls.py
apps/api/src/evercurrent/timeline/: __init__.py  projection.py  schemas.py  timeline_builder.py
apps/api/tests/: conftest.py
apps/api/tests/evals/: __init__.py  conftest.py  eval_digest.py  eval_eve.py  eval_rag.py  eval_router.py  eval_scoring.py  runner.py  test_scoring_eval.py
apps/api/tests/evals/data/: digest_scenarios.json  eve_scenarios.json  rag_questions.json  router_labels.json  scoring_scenarios.json
apps/api/tests/evals/judge_prompts/: digest_rubric.txt  eve_rubric.txt
apps/api/tests/evals/reports/: 20260608T034023Z_scoring.json  20260608T034037Z_scoring.json  20260608T034539Z_scoring.json  20260615T055729Z_eve.json
apps/api/tests/integration/: test_model_schema_drift.py  test_signal_status.py
apps/api/tests/unit/: test_agent_tools.py  test_auth0_verifier.py  test_block_kit.py  test_card_drafter.py  test_cards_builder.py  test_chunking.py  test_connector_install.py  test_demo_chatter_dedup.py  test_digest_agent.py  test_digest_scheduler.py  test_digest_staleness.py  test_eve_grounding.py  test_health.py  test_ingest_idempotent.py  test_mcp_client.py  test_mcp_tools.py  test_message_classifier.py  test_org_context.py  test_pdf_extract.py  test_quiet_hours.py  test_ready.py  test_resolve_chatter.py  test_rls_helpers.py  test_route_resolution.py  test_router_agent.py  test_scoring_engine.py  test_signal_drafter.py  test_signal_resolution.py  test_slack_crypto.py  test_slack_deliver.py  test_slack_events_handler.py  test_slack_signature.py  test_smoke.py  test_timeline_projection.py
(+297 files in other folders)
