[project]
name = "evercurrent"
version = "0.1.0"
description = "EverCurrent backend: agentic AI layer for hardware engineering teams."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "EverCurrent contributors" },
]
license = { text = "MIT" }

dependencies = [
    # Web framework + server
    "fastapi>=0.136.1,<0.137.0",
    "uvicorn[standard]",

    # Validation + settings
    "pydantic>=2.12",
    "pydantic-settings",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "alembic",
    "pgvector",

    # Job queue + cache
    "arq",
    "redis",

    # LLM + embeddings
    "anthropic",
    "voyageai",

    # Observability
    "structlog",
    "opentelemetry-sdk",
    "opentelemetry-api",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-otlp",

    # HTTP + retry
    "httpx",
    "tenacity",

    # DI
    "dependency-injector",
]

[dependency-groups]
dev = [
    "ruff",
    "ty",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pre-commit",
    "httpx",  # for TestClient
]

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # pydocstyle — docstring style is opinionated; AGENTS.md governs
    "COM812",  # missing trailing comma — handled by formatter
    "ISC001",  # implicit string concat — conflicts with formatter
    "TD",      # author/issue links in TODO comments
    "FIX",     # forbid TODO/FIXME comments — too strict
    "EM",      # forbids string literals in raise; noisy
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "PLR2004", "ANN", "INP001"]
"src/evercurrent/main.py" = ["INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ty]
# ty is in early development. Light config; CI runs `ty check`.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
