[project]
name = "evercurrent"
version = "0.1.0"
description = "EverCurrent backend: agentic AI layer for hardware engineering teams."
requires-python = ">=3.13"
authors = [
    { name = "EverCurrent contributors" },
]
license = { text = "MIT" }

dependencies = [
    # Web framework + server
    "fastapi>=0.136.1,<0.137.0",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.18",  # multipart/form-data parsing for PDF uploads

    # Validation + settings
    "pydantic>=2.12",
    "pydantic-settings>=2.6",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",

    # Job queue + cache
    "celery>=5.4",
    "redis>=5.2",

    # LLM + embeddings
    "anthropic>=0.40",
    "voyageai>=0.3",

    # PDF extraction
    "pymupdf>=1.24",

    # Templating
    "jinja2>=3.1",

    # Auth
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "cryptography>=44",  # used by python-jose + connector token encryption

    # Observability
    "structlog>=24.4",
    "prometheus-fastapi-instrumentator>=7.0",
    "prometheus-client>=0.21",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.30",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    "httpx>=0.27",                    # FastAPI TestClient transport
    "testcontainers[postgres,redis]>=4.9",
    "polyfactory>=2.18",
    "freezegun>=1.5",                 # time-travel for digest scheduling tests
]

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",        # pydocstyle — docstring style is opinionated; AGENTS.md governs
    "COM812",   # missing trailing comma — handled by formatter
    "ISC001",   # implicit string concat — conflicts with formatter
    "TD",       # author/issue links in TODO comments
    "FIX",      # forbid TODO/FIXME comments — too strict
    "EM",       # forbids string literals in raise; noisy
    "TRY003",   # long messages outside exception class
    "TC001",    # move first-party imports into TYPE_CHECKING
    "TC002",    # move third-party imports into TYPE_CHECKING
    "TC003",    # move stdlib imports into TYPE_CHECKING
    "PLR0913",  # too many function args
    "FBT001",   # boolean positional arg in function definition
    "FBT002",   # boolean default value in function definition
    "A005",     # module shadowing stdlib (we want `digest`, `decisions`, etc.)
    "ANN401",   # dynamically-typed expressions (Any) — sometimes necessary
    "S608",     # SQL injection — false positives on f-string SQL we own
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "S105", "S106", "S107", "PLR2004", "ANN", "INP001", "T201", "PLR0915", "C901", "SLF001"]
"src/evercurrent/scripts/**/*" = ["T201", "C901", "BLE001", "TRY300", "PLR0915"]
"src/evercurrent/main.py" = ["INP001"]
"src/evercurrent/db/schema_check.py" = ["T201"]
"alembic/env.py" = ["INP001"]
"src/evercurrent/jobs/tasks/*.py" = ["PLC0415"]
"src/evercurrent/jobs/celery_tasks.py" = ["PLC0415"]
"src/evercurrent/api/routes/*.py" = ["B008", "PLC0415"]
"src/evercurrent/connectors/slack/client.py" = ["PLR2004", "PERF401"]
"src/evercurrent/connectors/slack/events.py" = ["C901", "PLR0911", "PLR0912"]
"src/evercurrent/rag/indexer.py" = ["PLC0415"]
"src/evercurrent/digest/generator.py" = ["PLC0415"]
"alembic/versions/*.py" = ["INP001", "ANN", "RUF012"]
"src/evercurrent/db/session.py" = ["PLW0603", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ty]
# ty is in early development. Light config; CI runs `ty check`.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
cache_dir = "/tmp/.pytest_cache"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]
